--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "4.4.7",
     "cookie-es": "1.2.2",
     "destr": "2.0.3",
+    "echarts": "^5.5.0",
     "eslint-plugin-regexp": "2.7.0",
     "jwt-decode": "4.0.0",
     "mapbox-gl": "3.5.2",
@@ -44,6 +45,7 @@
     "unplugin-vue-define-options": "1.5.3",
     "vue": "3.5.13",
     "vue-chartjs": "5.3.2",
+    "vue-echarts": "^6.7.3",
     "vue-flatpickr-component": "11.0.5",
     "vue-i18n": "10.0.4",
     "vue-prism-component": "2.0.0",
@@ -99,6 +101,7 @@
     "stylelint-config-standard-scss": "13.1.0",
     "stylelint-use-logical-spec": "5.0.1",
     "tsx": "4.19.2",
+    "typescript": "^5.9.3",
     "unplugin-auto-import": "0.18.6",
     "unplugin-vue-components": "0.27.5",
     "unplugin-vue-router": "0.8.8",
